force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/or_public__c.field-meta.xml
<CustomField>
    <fullName>or_public__c</fullName>
    <inlineHelpText>Are you a public sector organisation?</inlineHelpText>
    <label>OR - Public Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>