force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/or_reference__c.field-meta.xml
<CustomField>
    <fullName>or_reference__c</fullName>
    <inlineHelpText>Enter the number</inlineHelpText>
    <label>OR - Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>