force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/or_savings_reserves__c.field-meta.xml
<CustomField>
    <fullName>or_savings_reserves__c</fullName>
    <inlineHelpText>Total savings or reserves at the year end</inlineHelpText>
    <label>OR - Savings of Reserves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>