force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/or_section_status__c.field-meta.xml
<CustomField>
    <fullName>or_section_status__c</fullName>
    <inlineHelpText>Organisation &amp; contact details status</inlineHelpText>
    <label>OR - Section Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INCOMPLETE</fullName>
                <default>true</default>
                <label>INCOMPLETE</label>
            </value>
            <value>
                <fullName>COMPLETE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>