force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/or_surplus_deficit__c.field-meta.xml
<CustomField>
    <fullName>or_surplus_deficit__c</fullName>
    <inlineHelpText>Surplus or deficit at the year end</inlineHelpText>
    <label>OR - Surplus or Deficit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>