force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/or_total_income__c.field-meta.xml
<CustomField>
    <fullName>or_total_income__c</fullName>
    <inlineHelpText>Total income for the year</inlineHelpText>
    <label>OR - Total Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>