force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ou_additional__c.field-meta.xml
<CustomField>
    <fullName>ou_additional__c</fullName>
    <description>If you intend to measure any additional outcomes which are not related to payments but which will further illustrate the impact your project is having, please provide details.</description>
    <inlineHelpText>Are there any additional outcomes that you will be measuring?</inlineHelpText>
    <label>OU - Additional</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>