force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ou_attributable__c.field-meta.xml
<CustomField>
    <fullName>ou_attributable__c</fullName>
    <description>Please explain how you will make sure that outcomes payments are only made for outcomes achieved because of your project and not arising from other interventions (i.e. the outcomes would have been achieved whether your project took place or not).</description>
    <inlineHelpText>How will you ensure outcomes are attributable to your project?</inlineHelpText>
    <label>OU - Attributable</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>