force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ou_justification__c.field-meta.xml
<CustomField>
    <fullName>ou_justification__c</fullName>
    <description>Explain how and why these outcomes were selected to be the most suitable for your project. Your answer should include how the outcomes link back to the interventions you expect the project to deliver, and to the needs of your service users.</description>
    <inlineHelpText>Outline why you chose these outcomes and payment triggers</inlineHelpText>
    <label>OU - Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>