force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ou_number_of_outcomes__c.field-meta.xml
<CustomField>
    <fullName>ou_number_of_outcomes__c</fullName>
    <description>Count of outcomes for this application</description>
    <formula>application__r.Full_App_Number_of_Outcomes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Count of outcomes for this application</inlineHelpText>
    <label>OU - Number of Outcomes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>