force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ou_payment_determination__c.field-meta.xml
<CustomField>
    <fullName>ou_payment_determination__c</fullName>
    <description>Set out how you arrived at the outcomes payments and how you have demonstrated value for money to the commissioner.</description>
    <inlineHelpText>How did you determine the payments per outcome?</inlineHelpText>
    <label>OU - Payment Determination</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>