force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ou_primary_outcome_count__c.field-meta.xml
<CustomField>
    <fullName>ou_primary_outcome_count__c</fullName>
    <description>Count of primary outcomes (should be 1)</description>
    <formula>application__r.Full_App_Primary_Outcome_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Count of primary outcomes (should be 1)</inlineHelpText>
    <label>OU - Primary Outcome Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>