force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ou_relate__c.field-meta.xml
<CustomField>
    <fullName>ou_relate__c</fullName>
    <description>If your project has more than one outcome, explain how the outcomes are related to each other. For example, how do additional outcomes demonstrate progress towards the primary outcome (such as, completing training may serve as proxy for gaining employment, or improved scores on a wellbeing star indicate movement towards longer term reductions in GP visits).</description>
    <inlineHelpText>If applicable, how do the outcomes relate to each other?</inlineHelpText>
    <label>OU - Relate</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>