force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_applicant_organisation_name__c.field-meta.xml
<CustomField>
    <fullName>ov_applicant_organisation_name__c</fullName>
    <inlineHelpText>What is the legal name of the lead applicant&#39;s organisation?</inlineHelpText>
    <label>OV - Applicant Organisation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>