force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_assist_sourcing_investment__c.field-meta.xml
<CustomField>
    <fullName>ov_assist_sourcing_investment__c</fullName>
    <inlineHelpText>Do you intend to assist the service provider in sourcing social investment?</inlineHelpText>
    <label>OV - Assist Sourcing Investment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>