force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_engaged_service_providers__c.field-meta.xml
<CustomField>
    <fullName>ov_engaged_service_providers__c</fullName>
    <inlineHelpText>Have you engaged with any service providers at this stage?</inlineHelpText>
    <label>OV - Engaged Service Providers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>