force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_engaged_social_investors__c.field-meta.xml
<CustomField>
    <fullName>ov_engaged_social_investors__c</fullName>
    <inlineHelpText>Do you intend to take on social investment?</inlineHelpText>
    <label>OV - Engaged Social Investors</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>