force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_intermediary_assisting__c.field-meta.xml
<CustomField>
    <fullName>ov_intermediary_assisting__c</fullName>
    <inlineHelpText>Is there an intermediary assisting with this application?</inlineHelpText>
    <label>OV - Intermediary Assisting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>