force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_intermediary_contact_name__c.field-meta.xml
<CustomField>
    <fullName>ov_intermediary_contact_name__c</fullName>
    <inlineHelpText>Contact name</inlineHelpText>
    <label>OV - Intermediary Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>