force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_intermediary_contact_number__c.field-meta.xml
<CustomField>
    <fullName>ov_intermediary_contact_number__c</fullName>
    <inlineHelpText>Contact phone number</inlineHelpText>
    <label>OV - Intermediary Contact Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>