force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_intermediary_email__c.field-meta.xml
<CustomField>
    <fullName>ov_intermediary_email__c</fullName>
    <inlineHelpText>Email address</inlineHelpText>
    <label>OV - Intermediary Email</label>
    <type>Email</type>
</CustomField>