force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_intermediary_sector__c.field-meta.xml
<CustomField>
    <fullName>ov_intermediary_sector__c</fullName>
    <inlineHelpText>Sector of organisation</inlineHelpText>
    <label>OV - Intermediary Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sector_of_Organisation</valueSetName>
    </valueSet>
</CustomField>