force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_investor_commitment__c.field-meta.xml
<CustomField>
    <fullName>ov_investor_commitment__c</fullName>
    <inlineHelpText>Tell us about any investor in principle commitment you have gained or due diligence undertaken by social investors in support of your project.</inlineHelpText>
    <label>OV - Investor Commitment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>