force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_investor_involvement_confirmed__c.field-meta.xml
<CustomField>
    <fullName>ov_investor_involvement_confirmed__c</fullName>
    <inlineHelpText>Has a social investor confirmed they would like to be involved with your project?</inlineHelpText>
    <label>OV - Investor Involvement Confirmed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>