force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_max_estimated_outcomes_payments__c.field-meta.xml
<CustomField>
    <fullName>ov_max_estimated_outcomes_payments__c</fullName>
    <description>Page Title:Estimated Outcomes Payments</description>
    <inlineHelpText>How much, as a maximum, are the total estimated outcomes payments for your project, including the Life Chances Fund contribution?</inlineHelpText>
    <label>OV - Max Estimated Outcomes Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>