force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_max_requested_funds__c.field-meta.xml
<CustomField>
    <fullName>ov_max_requested_funds__c</fullName>
    <inlineHelpText>How much, as a maximum, are you requesting from the Life Chances Fund to contribute to outcomes payments?</inlineHelpText>
    <label>OV - Max Requested Funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>