force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_number_of_commissioners__c.field-meta.xml
<CustomField>
    <fullName>ov_number_of_commissioners__c</fullName>
    <inlineHelpText>Count of commissioner forms for this application</inlineHelpText>
    <label>OV - Number of Commissioners</label>
    <summaryForeignKey>Form_LCF_Commissioner_1__c.full_application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>