force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_organisation_sector__c.field-meta.xml
<CustomField>
    <fullName>ov_organisation_sector__c</fullName>
    <inlineHelpText>What is the organisation sector of the lead applicant?</inlineHelpText>
    <label>OV - Organisation Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sector_of_Organisation</valueSetName>
    </valueSet>
</CustomField>