force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_organisation_type__c.field-meta.xml
<CustomField>
    <fullName>ov_organisation_type__c</fullName>
    <inlineHelpText>What type of organisation is the lead applicant?</inlineHelpText>
    <label>OV - Organisation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commissioner</fullName>
            </value>
            <value>
                <fullName>Service provider</fullName>
            </value>
            <value>
                <fullName>Intermediary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>