force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_payments_end_date__c.field-meta.xml
<CustomField>
    <fullName>ov_payments_end_date__c</fullName>
    <description>For example, 01 10 2020. It is common for outcome payments to be made beyond the period in which services are delivered. Please note LCF payments must be claimed by September 2024.</description>
    <inlineHelpText>When would you like your project to finish making outcomes payments?</inlineHelpText>
    <label>OV - Payments End Date</label>
    <type>Date</type>
</CustomField>