force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_primary_commissioner__c.field-meta.xml
<CustomField>
    <fullName>ov_primary_commissioner__c</fullName>
    <description>Full Application Primary Commissioner</description>
    <formula>application__r.Full_App_Primary_Commissioner__c</formula>
    <inlineHelpText>Full Application Primary Commissioner</inlineHelpText>
    <label>OV - Primary Commissioner</label>
    <type>Text</type>
</CustomField>