force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_primary_commissioner_count__c.field-meta.xml
<CustomField>
    <fullName>ov_primary_commissioner_count__c</fullName>
    <description>Count of primary commissioners (should be 1)</description>
    <formula>application__r.Full_App_Primary_Commissioner_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Count of primary commissioners (should be 1)</inlineHelpText>
    <label>OV - Primary Commissioner Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>