force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_project_name__c.field-meta.xml
<CustomField>
    <fullName>ov_project_name__c</fullName>
    <inlineHelpText>What would you like to call your project?</inlineHelpText>
    <label>OV - Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>