force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_service_provider_identified__c.field-meta.xml
<CustomField>
    <fullName>ov_service_provider_identified__c</fullName>
    <inlineHelpText>Have you identified a service provider that is likely to be involved with your project?</inlineHelpText>
    <label>OV - Service Provider Identified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>