force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_service_provider_plans__c.field-meta.xml
<CustomField>
    <fullName>ov_service_provider_plans__c</fullName>
    <inlineHelpText>Detail plans you have to work with the identified provider(s).</inlineHelpText>
    <label>OV - Service Provider Plans</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>