force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_service_provider_sector__c.field-meta.xml
<CustomField>
    <fullName>ov_service_provider_sector__c</fullName>
    <inlineHelpText>What is the sector of the provider?</inlineHelpText>
    <label>OV - Service Provider Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sector_of_Organisation</valueSetName>
    </valueSet>
</CustomField>