force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_service_provider_social_investment__c.field-meta.xml
<CustomField>
    <fullName>ov_service_provider_social_investment__c</fullName>
    <inlineHelpText>Are you open to your service provider taking on social investment?</inlineHelpText>
    <label>OV - Service Provider Social Investment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>