force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_services_end_date__c.field-meta.xml
<CustomField>
    <fullName>ov_services_end_date__c</fullName>
    <description>For example, 01 10 2019.</description>
    <inlineHelpText>When would you like your project to finish delivering services?</inlineHelpText>
    <label>OV - Services End Date</label>
    <type>Date</type>
</CustomField>