force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_services_paid_by_outcomes__c.field-meta.xml
<CustomField>
    <fullName>ov_services_paid_by_outcomes__c</fullName>
    <description>Projects need to be more than 50% outcomes based to be eligible for LCF funding.</description>
    <inlineHelpText>Can you confirm that over 50% of your services will still be paid on an outcomes basis?</inlineHelpText>
    <label>OV - Services Paid by Outcomes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>