force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_services_start_date__c.field-meta.xml
<CustomField>
    <fullName>ov_services_start_date__c</fullName>
    <description>For example, 01 10 2018. Your SIB will not be able to launch until you have completed due diligence with investors, obtained sign off from commissioners and confirmed who will be delivering, investing in and managing your SIB. This can take 12 months to complete.</description>
    <inlineHelpText>When would you like your project to start delivering services?</inlineHelpText>
    <label>OV - Services Start Date</label>
    <type>Date</type>
</CustomField>