force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ov_vcse_involvement__c.field-meta.xml
<CustomField>
    <fullName>ov_vcse_involvement__c</fullName>
    <description>Describe how you have engaged with VCSEs and what role they will play in the project.</description>
    <inlineHelpText>How does your project involve voluntary, community and social enterprises (VCSEs)?</inlineHelpText>
    <label>OV - VCSE Involvement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>