force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/si_local_service_impact__c.field-meta.xml
<CustomField>
    <fullName>si_local_service_impact__c</fullName>
    <description>Explain how you plan to work alongside existing local service provision. Reference any involvement you have had with local government bodies, other local SIBs and local funders.</description>
    <inlineHelpText>How does your project enhance existing local provision for this policy area?</inlineHelpText>
    <label>SI - Local Service Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>