force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/si_national_service_impact__c.field-meta.xml
<CustomField>
    <fullName>si_national_service_impact__c</fullName>
    <inlineHelpText>How are existing national services complemented by your project?</inlineHelpText>
    <label>SI - National Service Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>