force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/si_priority_explanation__c.field-meta.xml
<CustomField>
    <fullName>si_priority_explanation__c</fullName>
    <description>With respect to budget, community, learning and social impact, set out how this issue is a commissioner priority and what evidence (e.g. published strategies, speeches) supports this.</description>
    <inlineHelpText>Why is this issue a priority for the commissioning organisation(s)?</inlineHelpText>
    <label>SI - Priority Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>