force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/si_specific_social_issue__c.field-meta.xml
<CustomField>
    <fullName>si_specific_social_issue__c</fullName>
    <inlineHelpText>What is the specific social issue that you are seeking to address to give people better life chances?</inlineHelpText>
    <label>SI - Specific Social Issue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>