force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/si_supporting_research__c.field-meta.xml
<CustomField>
    <fullName>si_supporting_research__c</fullName>
    <inlineHelpText>Provide a summary of the research undertaken to support your project</inlineHelpText>
    <label>SI - Supporting Research</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>