force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/si_themes__c.field-meta.xml
<CustomField>
    <fullName>si_themes__c</fullName>
    <description>Select all options that are relevant to you.</description>
    <inlineHelpText>What is the theme of your project?</inlineHelpText>
    <label>SI - Themes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Children's services</fullName>
            </value>
            <value>
                <fullName>Drug and alcohol dependency</fullName>
            </value>
            <value>
                <fullName>Young people</fullName>
            </value>
            <value>
                <fullName>Healthy lives</fullName>
            </value>
            <value>
                <fullName>Older people's services</fullName>
            </value>
            <value>
                <fullName>Early years</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>