force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/si_themes_other__c.field-meta.xml
<CustomField>
    <fullName>si_themes_other__c</fullName>
    <inlineHelpText>What is the other theme of your project?</inlineHelpText>
    <label>SI - Themes (Other)</label>
    <type>TextArea</type>
</CustomField>