force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/si_vcse_involvement__c.field-meta.xml
<CustomField>
    <fullName>si_vcse_involvement__c</fullName>
    <inlineHelpText>How does your project involve voluntary, community and social enterprises (VCSEs)?</inlineHelpText>
    <label>SI - VCSE Involvement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>