force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/su_age_groups__c.field-meta.xml
<CustomField>
    <fullName>su_age_groups__c</fullName>
    <inlineHelpText>What age groups will you work with?</inlineHelpText>
    <label>SU - Age Groups</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All age groups</fullName>
            </value>
            <value>
                <fullName>Not age specific</fullName>
            </value>
            <value>
                <fullName>Specific age groups</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>