force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/su_age_groups_specifics__c.field-meta.xml
<CustomField>
    <fullName>su_age_groups_specifics__c</fullName>
    <inlineHelpText>Select all age groups that apply</inlineHelpText>
    <label>SU - Age Groups Specifics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - 5 years old</fullName>
            </value>
            <value>
                <fullName>6 - 10 years old</fullName>
            </value>
            <value>
                <fullName>11 - 15 years old</fullName>
            </value>
            <value>
                <fullName>16 - 24 years old</fullName>
            </value>
            <value>
                <fullName>25 - 39 years old</fullName>
            </value>
            <value>
                <fullName>40 - 49 years old</fullName>
            </value>
            <value>
                <fullName>50 - 59 years old</fullName>
            </value>
            <value>
                <fullName>60 - 69 years old</fullName>
            </value>
            <value>
                <fullName>70+ years old</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>